Some Issue Fixed

--- a/src/main/resources/templates/adminSupportUserList.html
+++ b/src/main/resources/templates/adminSupportUserList.html
@@ -3,7 +3,7 @@
 <head>
   <title>Support Requests</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+  <link rel="icon" href="/docs/swaplogo.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
