--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <title>Home - SwapTicket</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SwapTicket - Secure platform for buying and selling train tickets with guaranteed transactions">
-    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+    <link rel="icon" href="/docs/swaplogo.png" type="image/png">
 
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
