--- a/src/main/resources/templates/myTransactions.html
+++ b/src/main/resources/templates/myTransactions.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>My Transaction History</title>
-    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+    <link rel="icon" href="/docs/swaplogo.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
