--- a/src/main/resources/templates/previewAmount.html
+++ b/src/main/resources/templates/previewAmount.html
@@ -4,7 +4,7 @@
     <title>Ticket Payment Preview</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+    <link rel="icon" href="/docs/swaplogo.png" type="image/png">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -942,7 +942,7 @@
                 "currency": "INR",
                 "name": "SwapTicket",
                 "description": "Ticket Purchase",
-                "image": "https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png",
+                "image": "https://res.cloudinary.com/dgrxmavho/image/upload/v1751145067/swaplogo_j5aqzu.png",
                 "handler": function (response) {
                     // Form to POST payment result to server
                     const form = document.createElement('form');
