--- a/src/main/resources/templates/userSupportForm.html
+++ b/src/main/resources/templates/userSupportForm.html
@@ -4,7 +4,7 @@
     <title>Customer Support</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+    <link rel="icon" href="/docs/swaplogo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         * {
@@ -104,7 +104,7 @@
             /* Updated background with light logo wallpaper */
             background: 
                 linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.85)),
-                url('https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png');
+                url('https://res.cloudinary.com/dgrxmavho/image/upload/v1751145067/swaplogo_j5aqzu.png');
             background-size: 200px 200px;
             background-position: center;
             background-repeat: repeat;
@@ -125,7 +125,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url('https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png');
+            background-image: url('https://res.cloudinary.com/dgrxmavho/image/upload/v1751144582/Train_Ticket_Journey_Logo_s3vjpy.png');
             background-size: 150px 150px;
             background-repeat: repeat;
             opacity: 0.05;
