Added WebSocket in Customer Support Message

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1114,8 +1114,8 @@
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul>
-                    <li><a href="mailto:support@swapticket.com"><i class="fas fa-envelope"></i> support@swapticket.com</a></li>
-                    <li><a href="tel:+915551234567"><i class="fas fa-phone"></i> +91 (555) 123-4567</a></li>
+                    <li><a href="mailto:swap2ticket.com"><i class="fas fa-envelope"></i> support@swapticket.com</a></li>
+                    <li><a href="tel:+916363356214"><i class="fas fa-phone"></i> +91 (555) 123-4567</a></li>
                     <li><a href="https://maps.google.com?q=Rajajinagar,Bengaluru-560010"><i class="fas fa-map-marker-alt"></i> Rajajinagar, Bengaluru- 560010</a></li>
                 </ul>
             </div>
