--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -243,7 +243,7 @@
             left: 0;
             right: 0;
             height: 5px;
-            background: linear-gradient(90deg, var(--primary), var(--secondary));
+            background: linear-gradient(to right, rgb(128, 64, 64) 0%, #4a90e2 100%);
         }
 
         @keyframes floatUp {
@@ -738,6 +738,7 @@
                     </a>
                 </div>
             </form>
+            
         </div>
     </main>
 
