--- a/src/main/resources/templates/buyPNRTickets.html
+++ b/src/main/resources/templates/buyPNRTickets.html
@@ -501,9 +501,19 @@
 
     <!-- 🎫 LIST OF PNRs -->
     <div class="pnr-container">
+    <div th:if="${#lists.isEmpty(pnrs)}" style="grid-column: 1/-1; text-align: center; padding: 40px 0; color: #888; font-size: 1.2em;">
+        <span class="emoji">😔</span> No Tickets Available
+        <div style="font-size: 0.95em; color: #aaa; margin-top: 8px;">
+            Try once from Searching Train Number
+        </div>
+    </div>
         <div th:each="pnr : ${pnrs}" class="pnr-card">
             <div class="pnr-header">
-                <h3><span class="emoji">📄</span> PNR: <span th:text="${pnr.pnrNumber}"></span></h3>
+                <h3><span class="emoji">📄</span> PNR: <span th:text="${pnr.pnrNumber}"></span>
+            	<a th:href="@{/train-status(trainNo=${pnr.trainNumber})}" title="Train Status" style="color: inherit; text-decoration: none; margin-left: 30%; font-size: 1.3em; padding-right: 0px;">
+    <span class="emoji"><img src="/docs/route.gif" alt="Route" height="40px" width="50px"></span>
+</a>
+    </a>
             </div>
             <div class="pnr-body">
                 <div class="pnr-details">
