Show Train List

--- a/src/main/resources/templates/previewAmount.html
+++ b/src/main/resources/templates/previewAmount.html
@@ -34,7 +34,8 @@
             color: var(--dark);
             line-height: 1.6;
             padding: 20px;
-            min-height: 100vh;
+            min-height: 100vh;;
+            background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
         }
 
         .container {
