--- a/src/main/resources/templates/refer.html
+++ b/src/main/resources/templates/refer.html
@@ -16,6 +16,7 @@
             padding: 20px;
             background-color: #f5f7fa;
             color: #333;
+            background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
         }
         
         .container {
