--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -892,7 +892,7 @@ transform: scale(1.05);
 <img src="/docs/track.png" alt="Track">
 <h3>Track Train</h3>
 <p>Get live train status, current location, and set station alerts</p>
-<form th:action="@{/train-status}" method="get">
+<form th:action="@{/track-train-between}" method="get">
 <button class="button" type="submit">
 <i class="fas fa-search-location"></i>
 <span class="button-text">Track Train</span>
