--- a/src/main/resources/templates/buyPNRTickets.html
+++ b/src/main/resources/templates/buyPNRTickets.html
@@ -510,9 +510,15 @@
         <div th:each="pnr : ${pnrs}" class="pnr-card">
             <div class="pnr-header">
                 <h3><span class="emoji">📄</span> PNR: <span th:text="${pnr.pnrNumber}"></span>
-            	<a th:href="@{/train-status(trainNo=${pnr.trainNumber})}" title="Train Status" style="color: inherit; text-decoration: none; margin-left: 30%; font-size: 1.3em; padding-right: 0px;">
-    <span class="emoji"><img src="/docs/route.gif" alt="Route" height="40px" width="50px"></span>
-</a>
+            	<form th:action="@{/train-status(trainNo=${pnr.trainNumber})}" method="post" style="display: inline;">
+    <!-- Hidden input for limit -->
+    <input type="hidden" name="limit" value="50" />
+    <!-- Submit button styled like a link/icon -->
+    <button type="submit" title="Train Status" style="color: inherit; text-decoration: none; margin-left: 130%; font-size: 1.3em; padding-right: 0px;">
+        <img src="/docs/route.gif" alt="Route" height="40px" width="50px" />
+    </button>
+</form>
+
     </a>
             </div>
             <div class="pnr-body">
